# altPlayer

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  README.md
src/bridge/: CMakeLists.txt  diagnostics.h  event_dns.c  event_dns.h  events_loop.c  events_loop.h  http2_client.c  http2_client.h  http2_connection.c  http2_connection.h  http2_request.c  http2_request.h  http2_ssl.c  http2_ssl.h  http2_stream.c  http2_stream.h  io.c  io.h  log.c  log.h  main.c  main.h  main_client.c  player.c  player.h  sound_cards.c  stddef.h  wav.c  wav.h
src/shared_c/: CMakeLists.txt  alsa_player.c  alsa_player.h  alsa_soundc.c  alsa_soundc.h  cont_buf.c  cont_buf.h  cont_buf_read.h  event_file.c  event_file.h  event_file_pipe.c  event_file_sink.c  event_http2.h  event_loop.c  event_loop.h  event_pipe.c  event_pipe.h  event_sink.c  event_sink.h  event_trigger.c  file.c  file.h  filename.c  filename.h  flac.c  flac.h  http2_request.h  io.c  io.h  io_buffer.c  io_buffer.h  io_rf_stream.c  io_rf_stream.h  kp_set.c  kp_set.h  log.c  log.h  mem.c  mem.h  nv_set.c  (+21 more)
src/shared_c/event/: event_loop.c  event_loop.h  event_pipe.c  event_pipe.h  event_sink.c  event_trigger.c  event_trigger.h
src/shared_c/file/: event_file.h  event_file_pipe.c  event_file_sink.c  file.c  file.h
src/shared_c/http/: event_http2.h  http2_request.c  uri.c  uri.h
src/shared_c/pcm/: event_flac.c  event_flac.h  event_pcm.c  event_pcm.h  event_wav.c  event_wav.h  pcm_file.c  pcm_file.h  pcm_spec.c  pcm_spec.h
src/shared_c/struct/: cont_buf.c  cont_buf.h  cont_buf_read.h  kp_set.h  nv_set.h
src/shared_c/structs/: kp_set.c  nv_set.c  qfind.c  qfind.h
tests/shared_c/: CMakeLists.txt  SharedTestFixture.cc  SharedTestFixture.h  TestFile.h  TestMemorySink.cc  TestMemorySink.h  alsa_player.cc  cont_buf.cc  event_file.cc  io.cc  io_buffer.cc  io_rf_stream.cc  kp_set.cc  nv_set.cc  pcm.cc  pcm_decoder_flac.cc  pcm_decoder_wav.cc  pcm_file.cc  player.cc  qfind.cc  timer.cc  uri.cc
tests/shared_c/event/: TestHeaderPipe.cc  TestHeaderPipe.h  TestMemoryPipeCopy.cc  TestMemoryPipeCopy.h  TestMemorySink.cc  TestMemorySink.h  event_file.cc
tests/shared_c/file/: event_file.cc
tests/shared_c/http/: uri.cc
tests/shared_c/pcm/: event_flac.cc  event_wav.cc  pcm_file.cc  pcm_spec.cc
tests/shared_c/struct/: cont_buf.cc  kp_set.cc  nv_set.cc  qfind.cc
tests/shared_c/structs/: cont_buf.cc  kp_set.cc  nv_set.cc  qfind.cc
